# house-party-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
bartender/: admin.py  models.py  serializers.py  storage.py  views.py
bartender/migrations/: 0001_initial.py  0002_alter_order_settled_alter_orderitem_order.py  0002_alter_patron_photo.py  0003_alter_drink_photo.py  0003_alter_orderitem_order.py  0004_alter_drink_name_alter_patron_name.py  0004_alter_drink_photo_alter_patron_photo.py  0005_alter_orderitem_quantity.py  0005_sound.py  0006_alter_order_settled_alter_orderitem_quantity.py  0006_alter_sound_file.py  0007_alter_orderitem_quantity.py  0007_alter_sound_file.py  0008_alter_sound_file.py  0008_remove_drink_price.py  0009_alter_drink_photo_alter_patron_photo_and_more.py  0009_drink_photo_drink_price.py  0010_alter_drink_price.py  0010_drinkcategory_drink_category.py  0011_alter_drink_photo_alter_drink_price.py  0011_alter_drinkcategory_options.py  0012_patron_photo_alter_drink_photo.py  0012_remove_drink_category_drink_categories.py  0013_drink_in_stock.py
project/: asgi.py  settings.py  urls.py  wsgi.py
