[tool.poetry]
name = "virtual-bartender"
version = "0.2.0"
description = ""
authors = ["Brett Heinkel <bheinks@gmail.com>"]
readme = "README.md"
packages = [{include = "virtual_bartender"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"
django-nested-admin = "^4.0.2"
djangorestframework = "^3.14.0"
python-decouple = "^3.8"
pillow = "^10.1.0"
django-filter = "^23.3"
psycopg2-binary = "^2.9.9"
setuptools = "^68.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
