[tool.poetry]
name = "virtual-bartender"
version = "0.4.0"
description = ""
authors = ["Brett Heinkel <bheinks@gmail.com>"]
readme = "README.md"
packages = [{include = "virtual_bartender"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.1"
django-nested-admin = "^4.0.2"
djangorestframework = "^3.14.0"
python-decouple = "^3.8"
pillow = "^10.2.0"
django-filter = "^23.5"
psycopg2-binary = "^2.9.9"
setuptools = "^69.0.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
