[tool.poetry]
name = "virtual-bartender"
version = "0.4.0"
description = ""
authors = ["Brett Heinkel <bheinks@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.13"
django = "^5.1.4"
django-nested-admin = "^4.1.1"
djangorestframework = "^3.15.2"
python-decouple = "^3.8"
pillow = "^10.4.0"
django-filter = "^23.5"
psycopg2-binary = "^2.9.10"
setuptools = "^69.5.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
